--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4"
-colored = "2.1"
+colored = "3.0"
+anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
