just compile docs for a binary

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -71,10 +71,8 @@ jobs:
           submodules: true
       - name: Install nightly
         uses: dtolnay/rust-toolchain@nightly
-      - name: Install cargo-docs-rs
-        uses: dtolnay/install@cargo-docs-rs
-      - name: cargo docs-rs
-        run: cargo docs-rs
+      - name: cargo doc --no-deps --bins
+        run: cargo doc --no-deps --bins
   hack:
     # cargo-hack checks combinations of feature flags to ensure that features are all additive
     # which is required for feature unification
