--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ chrono = "0.4.43"
 colored = "3.1.1"
 anyhow = "1.0.101"
 clap = { version = "4.5.57", features = ["derive"] }
+
+[profile.release]
+lto = "fat"
